# occt-lessons

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Lesson04_HelloOpenCascade/: CMakeLists.txt  main.cpp
Lesson10_OCAF_from-scratch/: CMakeLists.txt  doctest.cbf
Lesson10_OCAF_from-scratch/doc/: test.xml
Lesson10_OCAF_from-scratch/src/: main.cpp
Lesson11_OCAF_interfaces/src/: main.cpp
Lesson12_XDE/: CMakeLists.txt  DisplayScene.cpp  DisplayScene.h
Lesson17_pmc/: CMakeLists.txt  main copy.cpp  main.cpp
Lesson18_bottle/: CMakeLists.txt  main.cpp
Lesson21_split-curves/: CMakeLists.txt  main.cpp
Lesson22_modify-shape/: CMakeLists.txt  main.cpp
Lesson23_HLR/: CMakeLists.txt
extras_Dockerfiles/opencascade_ubuntu/: Dockerfile
extras_GettingStarted/: Viewer.cpp
lessons/: CMakeLists.txt
lessons/Lesson04_HelloOpenCascade/: CMakeLists.txt  main.cpp
lessons/Lesson05_LocalCoord/: CMakeLists.txt  main.cpp
lessons/Lesson07_BRepTools/: CMakeLists.txt  main.cpp
lessons/Lesson08_Bool/: CMakeLists.txt  Viewer.cpp  Viewer.h  main.cpp
lessons/Lesson10_OCAF_from-scratch/: CMakeLists.txt
lessons/Lesson10_OCAF_from-scratch/doc/: test.cbf  test.xml
lessons/Lesson10_OCAF_from-scratch/src/: HelloOcaf.cpp
lessons/Lesson11_TNaming/: CMakeLists.txt  main.cpp  result.xml
lessons/Lesson12_Undo/: CMakeLists.txt  main.cpp  result.xml
lessons/Lesson17_Qt_Widgets/: CMakeLists.txt  OcctQtViewer.cpp
lessons/Lesson18_Select/: CMakeLists.txt  OcctQtViewer.cpp  main.cpp  mainwindow.h
